clusters/jptodev/apps/default/bike/nginx-init-git.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-nginx
  namespace: default
  labels:
    app: bike-nginx
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bike-nginx
  template:
    metadata:
      labels:
        app: bike-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: bike-html-volume
            mountPath: /usr/share/nginx/html
      volumes:
      - name: bike-html-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bike-nginx-service
  namespace: default
spec:
  selector:
    app: bike-nginx
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bike-nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "bike.129-153-66-137.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bike-nginx-service
            port:
              number: 80
  - host: "bike.jpconstantineau.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bike-nginx-service
            port:
              number: 80
